[gd_scene load_steps=3 format=3 uid="uid://caqyhnm05hh2e"]

[ext_resource type="Script" path="res://Scenes/Player/Attacks/orbital_bit.gd" id="1_y5lox"]
[ext_resource type="Texture2D" uid="uid://d38kv6lj8xqyb" path="res://Art/Effects/OrbitalBit.png" id="2_uvs24"]

[node name="OrbitalBit" type="Node2D"]
script = ExtResource("1_y5lox")

[node name="BitSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_uvs24")
hframes = 4
frame = 2

[node name="BitTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Speen" type="Marker2D" parent="."]

[node name="bit position" type="Marker2D" parent="Speen"]
position = Vector2(0, -22)

[connection signal="timeout" from="BitTimer" to="." method="_on_bit_timer_timeout"]
